# Ascend-mind-cluster

./: OWNERS  README.en.md  README.md  contributing.md
ascend-device-plugin/: README.md  (+2 more)
component/mindio/acp/: .gitignore  CMakeLists.txt  README.md
component/mindio/acp/cmake_modules/: bdm_common.cmake  bdm_test.cmake
component/mindio/acp/configs/: memfs.conf
component/mindio/acp/doc/: 环境变量.md
component/mindio/acp/doc/Interface_description/: API接口参考.md  convert接口.md  create_file接口.md  flush接口.md  initialize接口.md  load接口.md  multi_save接口.md  open_file接口.md  preload接口.md  register_checker接口.md  save接口.md
component/mindio/acp/python_whl/c2python_api/: c2python_api.py
component/mindio/acp/python_whl/mindio_acp/: README.md  setup.py
component/mindio/acp/python_whl/mindio_acp/mindio_acp/: VERSION  __init__.py
component/mindio/acp/python_whl/mindio_acp/tests/: .coveragerc  conftest.py
component/mindio/acp/scripts/: run_dtfuzz.sh  run_ut.sh
component/mindio/acp/src/: CMakeLists.txt  global_defs.h.in
component/mindio/acp/src/background/: CMakeLists.txt  background_constants.h  background_log.h  background_manager.cpp  background_manager.h  retry_task_pool.cpp  retry_task_pool.h  thread_pool.cpp  thread_pool.h
component/mindio/acp/src/background/backup/: CMakeLists.txt  backup_file_manager.cpp  backup_file_manager.h  backup_file_tracer.cpp  backup_file_tracer.h  backup_file_view.cpp  backup_file_view.h  backup_initiator.cpp  backup_initiator.h  backup_target.cpp  backup_target.h  dfs_adapter.cpp  dfs_adapter.h  dfs_backup_initiator.cpp  dfs_backup_initiator.h  mem_fs_backup_initiator.cpp  mem_fs_backup_initiator.h
component/mindio/acp/src/common/: CMakeLists.txt  auditlog_adapt.cpp  auditlog_adapt.h  file_check_utils.h  gcc_version.h  hlog.cpp  hlog.h  nds_api.h  non_copyable.h  service_configure.cpp  service_configure.h  timer_executor.cpp  timer_executor.h
component/mindio/acp/src/memfs/: CMakeLists.txt  memfs_api.cpp  memfs_api.h
component/mindio/acp/src/memfs/bmm/: CMakeLists.txt  README.md  bmm.cpp  bmm.h  bmm_common.h  bmm_pool.cpp  bmm_pool.h
component/mindio/acp/src/memfs/common/: CMakeLists.txt  common_includes.h  common_locker.h  dpax_list.h  error_code.h  mem_fs_constants.h  mem_fs_state.h  memfs_common.h  memfs_configuration.h  memfs_execution_service.h  memfs_file_util.h  memfs_kv_reader.h  memfs_lock.h  memfs_logger.h  memfs_out_logger.h  memfs_ring_buffer.h  memfs_str_util.h  memfs_validator.h
component/mindio/acp/src/memfs/fs/: CMakeLists.txt  evict_helper.cpp  evict_helper.h  inode_evictor.cpp  inode_evictor.h  inode_permission.cpp  inode_permission.h  mem_file_system.cpp  mem_file_system.h  mem_fs_inode.cpp  mem_fs_inode.h  user_group_cache.cpp  user_group_cache.h
component/mindio/acp/src/sdk/: CMakeLists.txt
component/mindio/acp/src/sdk/memfs/: CMakeLists.txt
component/mindio/acp/src/ufs/: CMakeLists.txt  aio_sync.h  byte_buffer.h  file_utils.cpp  file_utils.h  pacific_adapter.cpp  pacific_adapter.h  ufs_api.cpp  ufs_api.h  ufs_log.h  under_fs_factory.cpp  under_fs_factory.h  under_fs_manager.cpp  under_fs_manager.h
component/mindio/acp/src/util/: CMakeLists.txt  ockio_daemon.cpp
component/mindio/acp/test/: .gitignore  CMakeLists.txt
component/mindio/acp/test/conf/: config.yaml
component/mindio/acp/test/test_dt_fuzz/: CMakeLists.txt  dt_fuzz_test.cpp
component/mindio/acp/test/test_dt_fuzz/common/: utils.h
component/mindio/acp/test/test_dt_fuzz/sdk/: test_memfs_api.cpp  test_memfs_api.h
component/mindio/acp/test/tools/: CMakeLists.txt
component/mindio/acp/test/tools/memfs/: CMakeLists.txt
component/mindio/acp/test/unit_test/: gtest_main.cpp
component/mindio/acp/test/unit_test/background/: test_background_manager.cpp  test_retry_task_pool.cpp  test_thread_pool.cpp
component/mindio/acp/test/unit_test/common/: test_file_check_utils.cpp  test_hlog.cpp  test_hlog.h  test_service_configure.cpp  test_timer_executor.cpp
component/mindio/acp/test/unit_test/memfs/: data_base_user_group_loader.cpp  data_base_user_group_loader.h  test_inode_permission.cpp  test_mem_fs_api.cpp  test_mem_fs_api_mkdirs.cpp  test_mem_fs_inode_evictor.cpp  test_mem_fs_state.cpp  test_system_loader_with_mocker.cpp  test_system_user_group_loader.cpp  test_user_group_cache.cpp
component/mindio/acp/test/unit_test/ufs/: test_byte_buffer.cpp  test_file_utils.cpp  test_file_utils.h  test_pacific_adapter.cpp  test_underfs.cpp
component/mindio/tft/: .gitignore  CMakeLists.txt  README.md
component/mindio/tft/cmake_modules/: ttp_common.cmake
component/mindio/tft/doc/: SECURITYNOTE.md
component/mindio/tft/doc/acc_links/: API.md  SECURITYNOTE.md
component/mindio/tft/src/: CMakeLists.txt
component/mindio/tft/src/csrc/: CMakeLists.txt
component/mindio/tft/src/csrc/acc_links/: CMakeLists.txt  acc_def.h  acc_tcp_client.cpp  acc_tcp_client.h  acc_tcp_client_default.cpp  acc_tcp_client_default.h  acc_tcp_link.h  acc_tcp_link_complex_default.cpp  acc_tcp_link_complex_default.h  acc_tcp_link_default.h  acc_tcp_link_delay_cleanup.h  acc_tcp_listener.cpp  acc_tcp_listener.h  acc_tcp_request_context.cpp  acc_tcp_request_context.h  acc_tcp_server.cpp  acc_tcp_server.h  acc_tcp_server_default.cpp  acc_tcp_server_default.h  acc_tcp_shared_buf.cpp  acc_tcp_shared_buf.h  acc_tcp_worker.cpp  acc_tcp_worker.h
component/mindio/tft/src/csrc/c2python_api/: CMakeLists.txt  c2python_api.cpp  c2python_api.i
component/mindio/tft/src/csrc/c_api/: CMakeLists.txt  mindio_ttp_c_api.cpp  mindio_ttp_c_api.h
component/mindio/tft/src/csrc/common/: CMakeLists.txt  common.h  common_constants.h  common_locks.h  common_loggers.h  common_macros.h  common_messages.h  common_referable.h  common_types.h  common_utils.h  pthread_timedwait.h  read_write_lock_guard.h
component/mindio/tft/src/python/: __init__.py  setup.py
component/mindio/tft/test/: CMakeLists.txt  run_dt.sh  run_gtest_dt.sh
component/mindio/tft/test/conf/: config.yaml
component/mindio/tft/test/llt/: CMakeLists.txt  ut_main.cpp
component/mindio/tft/test/test_dt_fuzz/: CMakeLists.txt  dt_fuzz_test.cpp
(+3014 files in other folders)
